# Fillit

./: Makefile  author  testfile2
Fillit/: CMakeLists.txt  Fillit.h  Makefile  main.c
Fillit/Fillit/: author
Fillit/libft/: Makefile
libft/: Makefile  ft_memalloc.c  libft.h
srcs/: calculate.c  fillit.h  main.c  map.c  tetr_cut.c  validator.c
